WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161104
strict mode eval should not fire the var injection watch point
https://bugs.webkit.org/show_bug.cgi?id=161104
Summary
strict mode eval should not fire the var injection watch point
Saam Barati
Reported
2016-08-23 14:29:59 PDT
...
Attachments
patch
(1.55 KB, patch)
2016-08-23 14:36 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-08-23 14:31:07 PDT
It's unlikely this will make many things slower, but it might perturb code like this: function foo() { eval( something that doesn't var inject ); ... some computationally heavy things } function bar() { "use strict"; eval("var x = 20"); } bar(); foo();
Saam Barati
Comment 2
2016-08-23 14:36:29 PDT
Created
attachment 286779
[details]
patch
Geoffrey Garen
Comment 3
2016-08-23 14:39:23 PDT
Comment on
attachment 286779
[details]
patch r=me
WebKit Commit Bot
Comment 4
2016-08-23 15:18:29 PDT
Comment on
attachment 286779
[details]
patch Clearing flags on attachment: 286779 Committed
r204861
: <
http://trac.webkit.org/changeset/204861
>
WebKit Commit Bot
Comment 5
2016-08-23 15:18:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug