strict mode eval should not fire the var injection watch point https://bugs.webkit.org/show_bug.cgi?id=161104

Reviewed by Geoffrey Garen.

Strict mode eval can't do any variable injections. It was
an oversight that we fired the var injection watchpoint when
the eval is in strict mode.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::execute):


Canonical link: https://commits.webkit.org/179251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204861 268f45cc-cd09-0410-ab3c-d52691b4dbfc